--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "password-gen",
   "version": "0.1.0",
+  "homepage": "https://github.com/maheswarbehera/password-gen",
   "private": true,
   "dependencies": {
     "boostrap": "^2.0.0",
@@ -11,6 +12,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "web-vitals": "^3.4.0"
   }
 }
