--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "homepage": "https://github.com/maheswarbehera/password-gen",
   "private": true,
-  "dependencies": {
-    "boostrap": "^2.0.0",
-    "bootstrap": "^5.3.1",
+  "dependencies": { 
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,6 +37,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.0.0",
+    "tailwindcss": "^3.4.6",
     "web-vitals": "^3.4.0"
   }
 }
